--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- script to add to git -->
+    
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -36,5 +38,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="../dist/bundle.js"></script>
   </body>
+  
 </html>
