--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- for react css animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="../src/assets/jss/App.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
