Ajout de la communication avec le backend via l'api

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="Uniforce"
       content="Uniforce amazing website. Uniforce is an e-sport team from Rennes, France."
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- for react css animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
